<resources>
    <string name="app_name">KidsBoodle - Teacher</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="app_slogan">Today\'s Kid\'s\nTomorrow\'s Future</string>
    <string name="powered_by">Powered By</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="lorem_with_dot">∙ Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="login">Log In</string>
    <string name="confirm">Confirm</string>
    <string name="login_text">Login</string>
    <string name="welcome">Welcome!</string>
    <string name="teacher_user_id">Teacher User Id</string>
    <string name="password">Password</string>
    <string name="save_password">Save Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="change_password">Change Password</string>
    <string name="forgot_password_without_questionmark">Forgot Password</string>
    <string name="no_worries">No Worries!</string>
    <string name="enterMobileNumber">Enter Your Mobile No</string>
    <string name="enterEmail">Enter Your Email Id</string>
    <string name="enterOtp">Enter Your OTP Here</string>
    <string name="enterNewPassword">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="enterConfirmPassword">Confirm Password</string>
    <string name="letsExplore">Let\'s Explore</string>
    <string name="loginSuccessful">You have Successfully Logged In!</string>
    <string name="title_time_table">Time Table</string>
    <string name="title_attendance">Attendance</string>
    <string name="title_live_class">Live Class</string>
    <string name="title_account">Account</string>
    <string name="create_announcement">Create Announcement</string>
    <string name="announcement_history">Announcement History</string>
    <string name="update_attendance">Update Attendance</string>
    <string name="view_attendance">View Attendance</string>
    <string name="students_attendance">Students Attendance</string>
    <string name="select_all">Select All</string>
    <string name="select_exam">Select exam</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start">Start</string>
    <string name="submit">Submit</string>
    <string name="enter_remarks">Enter remarks</string>
    <string name="_Class">Class</string>
    <string name="section">Section</string>
    <string name="select_class">Select Class</string>
    <string name="select_section">Select Section</string>
    <string name="select_subject">Select Subject</string>
    <string name="select_student">Select Student</string>
    <string name="check">Check</string>
    <string name="live">Live</string>
    <string name="timetable">Timetable</string>
    <string name="announcement_title">Announcement Title</string>
    <string name="type_your_announcement">Type your announcement...</string>
    <string name="publish">Publish</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="search_by_name">Search By Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_student">Check Student</string>
    <string name="students">Students</string>
    <string name="announcement">Announcement</string>
    <string name="student_profile">Student Profile</string>
    <string name="your_profile">Your Profile</string>
    <string name="grade">Grade</string>
    <string name="profile">Profile</string>
    <string name="liveclasses">Live Classes</string>
    <string name="logOut">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="update">Update</string>
    <string name="title_activity_change_password">Change Password</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enterOldPwd">Enter Old Password</string>
</resources>