<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.activity.login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/shade_of_yellow">

        <ImageView
            android:id="@+id/ivForgotPassBack"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/ic_left_arrow"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivKid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            app:srcCompat="@drawable/kid" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_minus18sdp"
            app:srcCompat="@drawable/ic_red_path" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_minus5sdp"
            app:srcCompat="@drawable/ic_curve_two" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivKid"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/_15sdp"
            android:text="@string/forgot_password_without_questionmark"
            android:textSize="@dimen/_20sdp"
            app:fontFamily="@font/lato_regular" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivKid"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/_15sdp"
            android:visibility="gone"
            android:text="@string/change_password"
            android:textSize="@dimen/_20sdp"
            app:fontFamily="@font/lato_regular" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_blue_curve" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llForgotPasswordMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtUserMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/lato_bold"
                android:hint="@string/enterMobileNumber"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:lines="1"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="OR"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/lato_bold"
                android:hint="@string/enterEmail"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivForgotPassNextBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_25sdp"
                android:padding="@dimen/_20sdp"
                app:srcCompat="@drawable/ic_arrow" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llForgotPasswordOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtEnterOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/enterOtp"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:lines="1"
                android:fontFamily="@font/lato_bold"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/enterNewPassword"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:lines="1"
                android:fontFamily="@font/lato_bold"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/enterConfirmPassword"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:lines="1"
                android:fontFamily="@font/lato_bold"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_12sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/lato_bold"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                app:backgroundTint="@color/white"
                app:cornerRadius="@dimen/_8sdp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>
</ScrollView>