<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shade_of_yellow"
    tools:context=".ui.activity.changepassword.ChangePasswordActivity">

    <RelativeLayout
        android:id="@+id/rl_upper_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivKid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            app:srcCompat="@drawable/kid" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_minus18sdp"
            app:srcCompat="@drawable/ic_red_path" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_minus5sdp"
            app:srcCompat="@drawable/ic_curve_two" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvhChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivKid"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/_15sdp"
            android:text="@string/change_password"
            android:textSize="@dimen/_20sdp"
            app:fontFamily="@font/lato_regular" />
    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_upper_body">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEnterOldPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/enterOldPwd"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:lines="1"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_12sdp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/enterNewPassword"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:lines="1"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_12sdp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/lato_bold"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:backgroundTint="@color/white"
            app:cornerRadius="@dimen/_8sdp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>